--- a/facilitydetail.html
+++ b/facilitydetail.html
@@ -80,7 +80,7 @@
                         </tr>
                         <tr>
                             <th>NAME</th>
-                            <td>Facility A</td>
+                            <td>Facility TOKYO</td>
                         </tr>
                         <tr>
                             <th>ADDRESS</th>
@@ -116,7 +116,7 @@
                         </tr>
                         <tr>
                             <th>UPDATED BY</th>
-                            <td>User1 (Admin)</td>
+                            <td>Michael Brown (PM)</td>
                         </tr>
                     </tbody>
                 </table>
