--- a/facilitymanage.html
+++ b/facilitymanage.html
@@ -46,6 +46,9 @@
         .container-fluid {
             min-height: calc(100vh - 120px); /* ヘッダーとフッターの高さを除外 */
         }
+        .table th {
+            background-color: #f2f2f2;
+        }
     </style>
 </head>
 <body>
@@ -87,27 +90,81 @@
                         <!-- サンプルデータ。必要に応じて動的に生成してください。 -->
                         <tr>
                             <td>1</td>
-                            <td>Facility A</td>
+                            <td>Facility TOKYO</td>
                             <td>123 Main St</td>
                             <td>Type 1</td>
                             <td>10</td>
                             <td>Yes</td>
                             <td>2023-07-31</td>
-                            <td>User1 (AD)</td>
+                            <td>Michael Brown (PM)</td>
                             <td><a href="facilitydetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
                         </tr>
                         <tr>
                             <td>2</td>
-                            <td>Facility B</td>
+                            <td>Facility OSAKA</td>
                             <td>456 Elm St</td>
                             <td>Type 2</td>
                             <td>5</td>
                             <td>No</td>
                             <td>2023-07-30</td>
-                            <td>User2 (AD)</td>
+                            <td>Michael Brown (PM)</td>
                             <td><a href="facilitydetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
                         </tr>
-                        <!-- 他の行も同様に追加 -->
+                        <tr>
+                            <td>3</td>
+                            <td>Facility KYOTO</td>
+                            <td>789 Pine St</td>
+                            <td>Type 1</td>
+                            <td>8</td>
+                            <td>Yes</td>
+                            <td>2023-07-29</td>
+                            <td>Michael Brown (PM)</td>
+                            <td><a href="facilitydetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>Facility NAGOYA</td>
+                            <td>321 Oak St</td>
+                            <td>Type 2</td>
+                            <td>12</td>
+                            <td>No</td>
+                            <td>2023-07-28</td>
+                            <td>Michael Brown (PM)</td>
+                            <td><a href="facilitydetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
+                        </tr>
+                        <tr>
+                            <td>5</td>
+                            <td>Facility SAPPORO</td>
+                            <td>654 Maple St</td>
+                            <td>Type 1</td>
+                            <td>9</td>
+                            <td>Yes</td>
+                            <td>2023-07-27</td>
+                            <td>Michael Brown (PM)</td>
+                            <td><a href="facilitydetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
+                        </tr>
+                        <tr>
+                            <td>6</td>
+                            <td>Facility HIROSHIMA</td>
+                            <td>987 Birch St</td>
+                            <td>Type 2</td>
+                            <td>6</td>
+                            <td>No</td>
+                            <td>2023-07-26</td>
+                            <td>Michael Brown (PM)</td>
+                            <td><a href="facilitydetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
+                        </tr>
+                        <tr>
+                            <td>7</td>
+                            <td>Facility FUKUOKA</td>
+                            <td>159 Cedar St</td>
+                            <td>Type 1</td>
+                            <td>7</td>
+                            <td>Yes</td>
+                            <td>2023-07-25</td>
+                            <td>Michael Brown (PM)</td>
+                            <td><a href="facilitydetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
+                        </tr>
                     </tbody>
                 </table>
                 <!-- ページネーションの例 -->
