--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>iXmoc - Dashboard</title>
+    <title>USERNAME Dashboard</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <style>
@@ -76,7 +76,7 @@
             <div include-html="sidebar.html"></div>
 
             <main id="main-content" class="col content">
-                <h1>Dashboard</h1>
+                <h1>USERNAME Dashboard</h1>
 
                 <!-- Your Project Section -->
                 <section>
@@ -88,6 +88,9 @@
                                 <th>Project Name <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
                                 <th>Project Start <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
                                 <th>Project End <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
+                                <th>Num Reports <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
+                                <th>Num Inspections <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
+                                <th>Num Issues <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
                                 <th>Progress <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
                                 <th>Status <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
                                 <th>UPDATE DATE <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
@@ -97,9 +100,12 @@
                         <tbody>
                             <tr>
                                 <td>1</td>
-                                <td>Project Alpha</td>
+                                <td>Project Facility TOKYO</td>
                                 <td>2023-01-01</td>
                                 <td>2023-12-31</td>
+                                <td>33</td>
+                                <td>99</td>
+                                <td>22</td>
                                 <td>
                                     <div class="progress-bar bg-success" role="progressbar" style="width: 40%;">40%</div>
                                 </td>
@@ -109,14 +115,32 @@
                             </tr>
                             <tr>
                                 <td>2</td>
-                                <td>Project Beta</td>
+                                <td>Project Facility OSAKA</td>
                                 <td>2023-02-01</td>
                                 <td>2023-11-30</td>
+                                <td>55</td>
+                                <td>88</td>
+                                <td>11</td>
                                 <td>
                                     <div class="progress-bar bg-warning" role="progressbar" style="width: 70%;">70%</div>
                                 </td>
                                 <td><span class="badge bg-warning">1 Week Delay</span></td>
                                 <td>2023-07-30</td>
+                                <td><a href="projectdetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>Project Facility KYOTO</td>
+                                <td>2023-03-01</td>
+                                <td>2023-12-01</td>
+                                <td>44</td>
+                                <td>77</td>
+                                <td>20</td>
+                                <td>
+                                    <div class="progress-bar bg-success" role="progressbar" style="width: 50%;">50%</div>
+                                </td>
+                                <td><span class="badge bg-success">On Schedule</span></td>
+                                <td>2023-07-29</td>
                                 <td><a href="projectdetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
                             </tr>
                         </tbody>
@@ -172,8 +196,8 @@
                                     <td>Crack on Wall</td>
                                     <td>Crack</td>
                                     <td>NEW</td>
-                                    <td>Inspector A (Ad)</td>
-                                    <td>Engineer B (PM)</td>
+                                    <td>John Doe (PO)</td>
+                                    <td>Michael Brown (PM)</td>
                                     <td><img src="thumbnail1.jpg" alt="thumbnail" width="50"></td>
                                     <td>2023-07-01</td>
                                     <td>2023-07-15</td>
@@ -185,12 +209,38 @@
                                     <td>Peeling Paint</td>
                                     <td>Peeling</td>
                                     <td>In Repair</td>
-                                    <td>Inspector B (SM)</td>
-                                    <td>Engineer C (OP)</td>
+                                    <td>Jane Smith (PD)</td>
+                                    <td>Chris Wilson (SE)</td>
                                     <td><img src="thumbnail2.jpg" alt="thumbnail" width="50"></td>
                                     <td>2023-06-20</td>
                                     <td>2023-07-05</td>
                                     <td>2023-07-02</td>
+                                    <td><a href="issuedetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td>Leaking Roof</td>
+                                    <td>Leak</td>
+                                    <td>NEW</td>
+                                    <td>Emily Davis (SM)</td>
+                                    <td>Amanda Miller (SC)</td>
+                                    <td><img src="thumbnail3.jpg" alt="thumbnail" width="50"></td>
+                                    <td>2023-07-05</td>
+                                    <td>2023-07-20</td>
+                                    <td>2023-07-15</td>
+                                    <td><a href="issuedetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
+                                </tr>
+                                <tr>
+                                    <td>4</td>
+                                    <td>Broken Window</td>
+                                    <td>Break</td>
+                                    <td>In Repair</td>
+                                    <td>David Martinez (AD)</td>
+                                    <td>John Doe (PO)</td>
+                                    <td><img src="thumbnail4.jpg" alt="thumbnail" width="50"></td>
+                                    <td>2023-06-30</td>
+                                    <td>2023-07-10</td>
+                                    <td>2023-07-08</td>
                                     <td><a href="issuedetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
                                 </tr>
                             </tbody>
