--- a/issuedetail.html
+++ b/issuedetail.html
@@ -104,7 +104,7 @@
                         <li class="breadcrumb-item active" aria-current="page">Issue Detail</li>
                     </ol>
                 </nav>
-                <h2>Project: Project Alpha</h2>
+                <h2>Project: Project Facility TOKYO</h2>
 
                 <!-- Issue Info Section -->
                 <div class="section-content">
