--- a/projectmanage.html
+++ b/projectmanage.html
@@ -83,6 +83,9 @@
                             <th>NAME <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
                             <th>Project Start <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
                             <th>Project End <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
+                            <th>Num Reports<button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
+                            <th>Num Inspections<button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
+                            <th>Num Issues<button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
                             <th>Progress <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
                             <th>Status <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
                             <th>UPDATE DATE <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
@@ -93,9 +96,12 @@
                         <!-- サンプルデータ。必要に応じて動的に生成してください。 -->
                         <tr>
                             <td>1</td>
-                            <td>Project Alpha</td>
+                            <td>Project Facility TOKYO</td>
                             <td>2023-01-01</td>
                             <td>2023-12-31</td>
+                            <td>33</td>
+                            <td>99</td>
+                            <td>22/44</td>
                             <td>
                                 <div class="progress-bar bg-success" role="progressbar" style="width: 40%;">40%</div>
                             </td>
@@ -105,9 +111,12 @@
                         </tr>
                         <tr>
                             <td>2</td>
-                            <td>Project Beta</td>
+                            <td>Project Facility OSAKA</td>
                             <td>2023-02-01</td>
                             <td>2023-11-30</td>
+                            <td>55</td>
+                            <td>88</td>
+                            <td>11/15</td>
                             <td>
                                 <div class="progress-bar bg-warning" role="progressbar" style="width: 70%;">70%</div>
                             </td>
@@ -115,7 +124,81 @@
                             <td>2023-07-30</td>
                             <td><a href="projectdetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
                         </tr>
-                        <!-- 他の行も同様に追加 -->
+                        <tr>
+                            <td>3</td>
+                            <td>Project Facility KYOTO</td>
+                            <td>2023-03-01</td>
+                            <td>2023-12-01</td>
+                            <td>44</td>
+                            <td>77</td>
+                            <td>20/40</td>
+                            <td>
+                                <div class="progress-bar bg-success" role="progressbar" style="width: 50%;">50%</div>
+                            </td>
+                            <td><span class="badge bg-success">On Schedule</span></td>
+                            <td>2023-07-29</td>
+                            <td><a href="projectdetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>Project Facility NAGOYA</td>
+                            <td>2023-04-01</td>
+                            <td>2023-11-30</td>
+                            <td>66</td>
+                            <td>99</td>
+                            <td>15/30</td>
+                            <td>
+                                <div class="progress-bar bg-danger" role="progressbar" style="width: 25%;">25%</div>
+                            </td>
+                            <td><span class="badge bg-danger">2 Weeks Delay</span></td>
+                            <td>2023-07-28</td>
+                            <td><a href="projectdetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
+                        </tr>
+                        <tr>
+                            <td>5</td>
+                            <td>Project Facility SAPPORO</td>
+                            <td>2023-05-01</td>
+                            <td>2023-10-31</td>
+                            <td>22</td>
+                            <td>44</td>
+                            <td>10/20</td>
+                            <td>
+                                <div class="progress-bar bg-warning" role="progressbar" style="width: 60%;">60%</div>
+                            </td>
+                            <td><span class="badge bg-warning">1 Week Delay</span></td>
+                            <td>2023-07-27</td>
+                            <td><a href="projectdetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
+                        </tr>
+                        <tr>
+                            <td>6</td>
+                            <td>Project Facility HIROSHIMA</td>
+                            <td>2023-06-01</td>
+                            <td>2023-09-30</td>
+                            <td>33</td>
+                            <td>66</td>
+                            <td>30/60</td>
+                            <td>
+                                <div class="progress-bar bg-success" role="progressbar" style="width: 80%;">80%</div>
+                            </td>
+                            <td><span class="badge bg-success">On Schedule</span></td>
+                            <td>2023-07-26</td>
+                            <td><a href="projectdetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
+                        </tr>
+                        <tr>
+                            <td>7</td>
+                            <td>Project Facility FUKUOKA</td>
+                            <td>2023-07-01</td>
+                            <td>2023-08-31</td>
+                            <td>11</td>
+                            <td>22</td>
+                            <td>5/10</td>
+                            <td>
+                                <div class="progress-bar bg-success" role="progressbar" style="width: 90%;">90%</div>
+                            </td>
+                            <td><span class="badge bg-success">On Schedule</span></td>
+                            <td>2023-07-25</td>
+                            <td><a href="projectdetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
+                        </tr>
                     </tbody>
                 </table>
                 <!-- ページネーションの例 -->
