--- a/usercreate.html
+++ b/usercreate.html
@@ -81,7 +81,11 @@
                         <label class="form-label">Role</label>
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" id="roleAdmin" value="Admin">
-                            <label class="form-check-label" for="roleAdmin">Admin (Ad)</label>
+                            <label class="form-check-label" for="roleAdmin">Project Owner(PO)</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="rolePM" value="ProjectManager">
+                            <label class="form-check-label" for="rolePM">Project Director (PD)</label>
                         </div>
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" id="rolePM" value="ProjectManager">
@@ -93,11 +97,15 @@
                         </div>
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" id="roleOP" value="Operator">
-                            <label class="form-check-label" for="roleOP">Operator (OP)</label>
+                            <label class="form-check-label" for="roleOP">Site Engineer (SE)</label>
                         </div>
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" id="roleVD" value="Vendor">
-                            <label class="form-check-label" for="roleVD">Vendor (VD)</label>
+                            <label class="form-check-label" for="roleVD">SubContractor (SC)</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="roleAdmin" value="Admin">
+                            <label class="form-check-label" for="roleAdmin">Admin (Ad)</label>
                         </div>
                     </div>
                     <div class="text-center">
