--- a/projectreportlist.html
+++ b/projectreportlist.html
@@ -101,7 +101,7 @@
                 </div>
 
                 <div class="section-content">
-                    <h3 class="section-title">Issues</h3>
+                    <h3 class="section-title">Reports</h3>
                     <table class="table table-bordered small-table">
                         <thead>
                             <tr>
