--- a/usermanage.html
+++ b/usermanage.html
@@ -85,14 +85,13 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <!-- サンプルデータ。必要に応じて動的に生成してください。 -->
                         <tr>
                             <td>1</td>
                             <td><button class="btn btn-sm btn-success">Enabled</button></td>
                             <td>John Doe</td>
                             <td>john@example.com</td>
-                            <td>Admin</td>
-                            <td>2023-07-31</td>
+                            <td>Project Owner (PO)</td>
+                            <td>2024-08-01</td>
                             <td><a href="userdetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
                         </tr>
                         <tr>
@@ -100,11 +99,55 @@
                             <td><button class="btn btn-sm btn-danger">Disabled</button></td>
                             <td>Jane Smith</td>
                             <td>jane@example.com</td>
-                            <td>User</td>
-                            <td>2023-07-30</td>
+                            <td>Project Director (PD)</td>
+                            <td>2024-07-30</td>
                             <td><a href="userdetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
                         </tr>
-                        <!-- 他の行も同様に追加 -->
+                        <tr>
+                            <td>3</td>
+                            <td><button class="btn btn-sm btn-success">Enabled</button></td>
+                            <td>Michael Brown</td>
+                            <td>michael@example.com</td>
+                            <td>Project Manager (PM)</td>
+                            <td>2024-07-29</td>
+                            <td><a href="userdetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td><button class="btn btn-sm btn-danger">Disabled</button></td>
+                            <td>Emily Davis</td>
+                            <td>emily@example.com</td>
+                            <td>Site Manager (SM)</td>
+                            <td>2024-07-28</td>
+                            <td><a href="userdetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
+                        </tr>
+                        <tr>
+                            <td>5</td>
+                            <td><button class="btn btn-sm btn-success">Enabled</button></td>
+                            <td>Chris Wilson</td>
+                            <td>chris@example.com</td>
+                            <td>Site Engineer (SE)</td>
+                            <td>2024-07-27</td>
+                            <td><a href="userdetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
+                        </tr>
+                        <tr>
+                            <td>6</td>
+                            <td><button class="btn btn-sm btn-danger">Disabled</button></td>
+                            <td>Amanda Miller</td>
+                            <td>amanda@example.com</td>
+                            <td>SubConstructor (SC)</td>
+                            <td>2024-07-26</td>
+                            <td><a href="userdetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
+                        </tr>
+                        <tr>
+                            <td>7</td>
+                            <td><button class="btn btn-sm btn-success">Enabled</button></td>
+                            <td>David Martinez</td>
+                            <td>david@example.com</td>
+                            <td>Admin (AD)</td>
+                            <td>2024-07-25</td>
+                            <td><a href="userdetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
+                        </tr>
                     </tbody>
                 </table>
                 <!-- ページネーションの例 -->
