--- a/se_index.html
+++ b/se_index.html
@@ -73,15 +73,14 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div include-html="sidebar.html"></div>
+            <div include-html="se_sidebar.html"></div>
 
             <main id="main-content" class="col content">
-                <h1>Michael Brown(PM) Dashboard</h1>
-                <p><a href="se_index.html">Sample:Chris Wilson(SE) Dashboard</a></p>
+                <h1>Chris Wilson(SE) Dashboard</h1>
 
                 <!-- Your Project Section -->
                 <section>
-                    <h2 class="section-title">Michael Brown(PM) Projects</h2>
+                    <h2 class="section-title">Chris Wilson(SE) Projects</h2>
                     <table class="table table-bordered">
                         <thead>
                             <tr>
@@ -114,43 +113,14 @@
                                 <td>2023-07-31</td>
                                 <td><a href="projectdetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
                             </tr>
-                            <tr>
-                                <td>2</td>
-                                <td>Project Facility OSAKA</td>
-                                <td>2023-02-01</td>
-                                <td>2023-11-30</td>
-                                <td>55</td>
-                                <td>88</td>
-                                <td>11</td>
-                                <td>
-                                    <div class="progress-bar bg-warning" role="progressbar" style="width: 70%;">70%</div>
-                                </td>
-                                <td><span class="badge bg-warning">1 Week Delay</span></td>
-                                <td>2023-07-30</td>
-                                <td><a href="projectdetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
-                            </tr>
-                            <tr>
-                                <td>3</td>
-                                <td>Project Facility KYOTO</td>
-                                <td>2023-03-01</td>
-                                <td>2023-12-01</td>
-                                <td>44</td>
-                                <td>77</td>
-                                <td>20</td>
-                                <td>
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: 50%;">50%</div>
-                                </td>
-                                <td><span class="badge bg-success">On Schedule</span></td>
-                                <td>2023-07-29</td>
-                                <td><a href="projectdetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
-                            </tr>
+                            
                         </tbody>
                     </table>
                 </section>
 
                 <!-- Your Tasks Section -->
                 <section>
-                    <h2 class="section-title">Michael Brown(PM) Tasks</h2>
+                    <h2 class="section-title">Chris Wilson(SE) Tasks</h2>
                     
                     <!-- Task Info -->
                     <div class="section-content">
@@ -159,13 +129,13 @@
                                 <tr>
                                     <th>Task Count in your Project</th>
                                     <th>Issue Count in your Project</th>
-                                    <th>unresolved Issues</th>
+                                    <th>Resolved Issues</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
+                                    <td>4</td>
                                     <td>10</td>
-                                    <td>5</td>
                                     <td>5</td>
                                 </tr>
                             </tbody>
@@ -174,7 +144,7 @@
 
                     <!-- Task List -->
                     <div class="section-content">
-                        <h3 class="section-title">Issue List</h3>
+                        <h3 class="section-title">Chris Wilson(SE)'s Issue List</h3>
                         <table class="table table-bordered">
                             <thead>
                                 <tr>
@@ -185,7 +155,7 @@
                                     <th>Detected By <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
                                     <th>Assigned To <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
                                     <th>Thumbnail <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
-                                    <th>Issue Date <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
+                                    <th>Due Date <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
                                     <th>Expected Completion <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
                                     <th>Update Date <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
                                     <th>Actions</th>
@@ -198,7 +168,7 @@
                                     <td>Crack</td>
                                     <td>NEW</td>
                                     <td>John Doe (PO)</td>
-                                    <td>Michael Brown (PM)</td>
+                                    <td>Chris Wilson (SE)</td>
                                     <td><img src="thumbnail1.jpg" alt="thumbnail" width="50"></td>
                                     <td>2023-07-01</td>
                                     <td>2023-07-15</td>
@@ -211,7 +181,7 @@
                                     <td>Peeling</td>
                                     <td>In Repair</td>
                                     <td>Jane Smith (PD)</td>
-                                    <td>Michael Brown(PM)</td>
+                                    <td>Chris Wilson (SE)</td>
                                     <td><img src="thumbnail2.jpg" alt="thumbnail" width="50"></td>
                                     <td>2023-06-20</td>
                                     <td>2023-07-05</td>
@@ -224,7 +194,7 @@
                                     <td>Leak</td>
                                     <td>NEW</td>
                                     <td>Emily Davis (SM)</td>
-                                    <td>Michael Brown(PM)</td>
+                                    <td>Chris Wilson (SE)</td>
                                     <td><img src="thumbnail3.jpg" alt="thumbnail" width="50"></td>
                                     <td>2023-07-05</td>
                                     <td>2023-07-20</td>
@@ -237,7 +207,7 @@
                                     <td>Break</td>
                                     <td>In Repair</td>
                                     <td>David Martinez (AD)</td>
-                                    <td>Michael Brown(PM)</td>
+                                    <td>Chris Wilson (SE)</td>
                                     <td><img src="thumbnail4.jpg" alt="thumbnail" width="50"></td>
                                     <td>2023-06-30</td>
                                     <td>2023-07-10</td>
